--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
