--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "5.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
